# parameter-golf

./: .gitignore  checkpoints.py  compression_probe.py  config.yml  extract_reference.py  ingest_runs.py  int5_roundtrip_eval.py  observability.py  pyproject.toml  reference_bpb_3070.json  reference_bpb_4090.json  reference_bpb_8xh100.json  run_probe.sh  schema.sql  scout_prs.sh  train_gpt.py
scout_reports/: scout_20260319_202003.md  scout_20260319_202046.md  scout_20260319_202212.md  scout_20260319_202231.md  scout_20260319_202256.md  scout_20260319_202408.md
