[project]
name = "parameter-golf"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "tqdm",
    "torch==2.10",
    "huggingface-hub",
    "kernels",
    "setuptools",
    "typing-extensions==4.15.0",
    "datasets",
    "tiktoken",
    "sentencepiece",
    "liger-kernel>=0.7.0",
    "zstandard>=0.25.0",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]
